Bug 1887703: Upgrade an assert in DeviceManagerDx::CreateContentDevicesLocked to MOZ_RELEASE_ASSERT. r=jrmuizel

If this is the source of the crash, this assert will change the crash
signature, but that will pinpoint the cause. In such a case, applying
D208682 should fix the crash.

Differential Revision: https://phabricator.services.mozilla.com/D208694